nft-generator: multi-thread nft generation